--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:hardwareAccelerated="true"
         android:theme="@style/AppTheme">
 
 
@@ -45,6 +46,7 @@
         <activity
             android:name=".TabActivity"
             android:label="@string/title_activity_tab"
+            android:hardwareAccelerated="false"
             android:windowSoftInputMode="adjustPan"/>
         <receiver android:name=".utils.ReminderNotificationReceiver"/>
 
